--- a/LabSegundaParte/LabSegundaParte/LabSegundaParte.csproj
+++ b/LabSegundaParte/LabSegundaParte/LabSegundaParte.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidades\Persona.cs" />
+    <Compile Include="Negocio\ClsPersona.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
